--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=currency-exchange-service
 server.port=8000
 spring.cloud.config.import-check.enabled=false
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
