--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=currency-conversion-service
+spring.application.name=CCC
 server.port=8100
 spring.cloud.config.import-check.enabled=false
